--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ script:
     - docker images michelecava/nodes
 
 before_deploy:
-    - docker login -u mcavaliere@kemp.ax -p Hannspee123?
+    - docker login -u michelecava -p Hannspee123?
 
 deploy:
     provider: script
